--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -26,6 +26,9 @@
 		<!-- CSS Files -->
 		<link href="{{ asset('css/argon-dashboard.css?v=2.0.4') }}" id="pagestyle" rel="stylesheet"/>
 		<link href="{{ asset('css/loading.css') }}" rel="stylesheet">
+		<!-- in the <head> section -->
+		<link
+		rel="stylesheet" type="text/css" href="https://cdn.datatables.net/2.0.5/css/dataTables.dataTables.min.css">
 	</head>
 	<body class="g-sidenav-show bg-gray-100">
 		<div id="loading">
@@ -124,7 +127,7 @@ document.getElementById("loading").style.display = "none";
 									<script>
 										document.write(new Date().getFullYear())
 									</script>,
-																																																																																																																																																																																																																																																																																made with
+																																																																																																																																																																																																																																																																																									made with
 									<i class="fa fa-heart"></i>
 									by
 									<a class="font-weight-bold" href="https://www.creative-tim.com" target="_blank">Creative Tim</a>
