--- a/templates/back/UserTables.html.twig
+++ b/templates/back/UserTables.html.twig
@@ -177,7 +177,7 @@
 						</div>
 						<div class="card-body px-0 pt-0 pb-2">
 							<div class="table-responsive p-0">
-								<table class="table align-items-center justify-content-center mb-0">
+								<table id='projectsTable' class="table align-items-center justify-content-center mb-0">
 									<thead>
 										<tr>
 											<th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Project</th>
@@ -448,19 +448,32 @@ damping: '0.5'
 Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
 }
 	</script><!-- Github buttons --><script async="" defer="" src="https://buttons.github.io/buttons.js"></script><!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc --><script src="{{ asset('js/argon-dashboard.min.js?v=2.0.4') }}"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<!-- before the closing <body> tag -->
+	<script type="text/javascript" src="https://cdn.datatables.net/2.0.5/js/dataTables.min.js"></script>
+	<script>
+		$('#projectsTable').DataTable({
+			"pagingType": "full_numbers",
+			"lengthMenu": [
+				[1, 25, 50, -1],
+				[1, 25, 50, "All"]
+			],
+			responsive: true,
+		});
+	</script>
 	<script async src="https://cdn.jsdelivr.net/npm/es-module-shims@1/dist/es-module-shims.min.js" crossorigin="anonymous"></script>
 	{% if hasErrorsCreate is defined  %}
 		<script>
 			const myModal = new bootstrap.Modal('#staticBackdrop', {keyboard: false});
-const modalToggle = document.getElementById('staticBackdrop');
-myModal.show(modalToggle);
+			const modalToggle = document.getElementById('staticBackdrop');
+			myModal.show(modalToggle);
 		</script>
 	{% endif %}
 	{% if formUpdateNumber is defined %}
 		<script>
 			const myModal = new bootstrap.Modal("{{ '#staticBackdrop' ~ formUpdateNumber }}", {keyboard: false});
-const modalToggle = document.getElementById("{{ 'staticBackdrop' ~ formUpdateNumber }}");
-myModal.show(modalToggle);
+			const modalToggle = document.getElementById("{{ 'staticBackdrop' ~ formUpdateNumber }}");
+			myModal.show(modalToggle);
 		</script>
 	{% endif %}
 	<script>
